Sort out test route flexability