@@ -2,6 +2,7 @@ package com.tramchester.unit.domain.presentation.DTO;
 
 import com.tramchester.domain.MutableRoute;
 import com.tramchester.domain.Route;
+import com.tramchester.domain.dates.TramDate;
 import com.tramchester.domain.presentation.DTO.LocationRefWithPosition;
 import com.tramchester.domain.presentation.DTO.RouteDTO;
 import com.tramchester.domain.reference.TransportMode;
@@ -18,7 +19,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class RouteDTOTest {
 
-    private final static TestRoute knownRoute = KnownTramRoute.getCornbrookTheTraffordCentre();
+    private static TramDate when = TestEnv.testDay();
+    private final static TestRoute knownRoute = KnownTramRoute.getCornbrookTheTraffordCentre(when);
 
 
     @Test
@@ -29,17 +31,18 @@ class RouteDTOTest {
         stations.add(new LocationRefWithPosition(TraffordCentre.fake()));
         RouteDTO routeDTO = new RouteDTO(getRoute(), stations);
 
+        // no longer used at FE for Tram at least
         assertEquals("CornbrookTheTraffordCentre", routeDTO.getRouteName());
         assertEquals(knownRoute.shortName(), routeDTO.getShortName());
         assertEquals(TransportMode.Tram, routeDTO.getTransportMode());
 
         List<LocationRefWithPosition> stationsDTO = routeDTO.getStations();
         assertEquals(1, stationsDTO.size());
-        assertEquals(TraffordCentre.getIdForDTO(), stations.get(0).getId());
+        assertEquals(TraffordCentre.getIdForDTO(), stations.getFirst().getId());
     }
 
     public Route getRoute() {
-        return MutableRoute.getRoute(knownRoute.getId(), knownRoute.shortName(), knownRoute.name(), TestEnv.MetAgency(),
+        return MutableRoute.getRoute(knownRoute.getId(), knownRoute.shortName(), "CornbrookTheTraffordCentre", TestEnv.MetAgency(),
                 knownRoute.mode());
     }
 }
